--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #070706;
+}
+html{
+  background-color: #070706;
 }
 
