--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,27 @@
+
 .logo{
-    margin: 1rem;
+    margin: auto;
+    width: 10%;
+    height: 10%;
+    
+}
+
+.navbar{
+    background-color: #10100F;
+    font-size: xx-large;
+    z-index: 2;
+    
+}
+
+.navar-brand{
+    padding: 0px !important;
+    margin: 0px !important;
+    
+}
+
+.container-fluid{
+    padding: 0px !important;
+    margin: 0px !important;
+    background-color: #10100F !important;
+    padding: 5px !important;
 }
