--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,36 +1,53 @@
 .header{
-    background-color: #212121;
+    background: rgb(33,33,33);
+    background: linear-gradient(180deg, rgba(33,33,33,1) 5%, rgba(88,88,88,1) 73%, rgba(56,56,56,1) 89%);
+    display: inline-block;
+    justify-content: center;
+    width: 100%;
+}
+
+@media (min-width: 500px){
+.header {
     display: flex;
     justify-content: center;
-}
+}  
+} 
+
 .headcontainer {
-    background-color: #585858;
+    
     color: #ffffff;
-    display: flex;
-    max-width: 85%;
-    margin: 10px;
-    padding: 5px;
-    text-align: justify;
+    max-width: 900px;
+    margin: 20px 0px 20px 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
     box-shadow: 0px 35px 68px 0px rgba(0, 0, 0, 0.5), inset 0px -12px 16px 0px rgba(5, 5, 5, 0.6), inset 0px 11px 28px 0px rgb(0, 0, 0);
     background-color: #585858;
-    border-radius: 73px 10px 71px 10px;
+    border-radius: 40px 40px 10px 10px;
     border: 3px outset #ff8946;
     backdrop-filter: blur(6px);
 }
 
-.info{
-    margin-top: 10%;
-    width: 50%;
-    display:block;
-    align-content: flex-end;
+
+
+
+h1{
+    margin: 5px;
 }
 
-.img{
-    width: 50%;
+.info{
+    
+    display:flex;
+    justify-content: center;
 }
 
 .cheff{
-    width: 100%;
-    height: 100%;
-    
+    width: 25%;
+    height: 10%;
 }
+
+.cheff:hover{
+    -webkit-transform:scale(1);transform:scale(1.2);
+    transition:all .5s ease-in-out;
+}
+
