--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,7 +22,7 @@
     padding-bottom: 10px;
     text-align: center;
     box-shadow: 0px 35px 68px 0px rgba(0, 0, 0, 0.5), inset 0px -12px 16px 0px rgba(5, 5, 5, 0.6), inset 0px 11px 28px 0px rgb(0, 0, 0);
-    background-color: #585858;
+    background-image: url(/src/img/bgmuestra2.jpg);
     border-radius: 40px 40px 10px 10px;
     border: 3px outset #ff8946;
     backdrop-filter: blur(6px);
