--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,8 @@
     margin: auto;
     width: 10%;
     height: 10%;
+    box-shadow: 0px 0px 9px #4e4e4e !important;
+    border-radius: 40px;
     
 }
 
